--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Radio FM Cidade :: 101,5 Mhz</title>
-    <link rel="stylesheet" href="pagina-one.css">
-    <link rel="stylesheet" href="pagina-two.css">
-    <link rel="stylesheet" href="pagina-three.css">
-    <link rel="stylesheet" href="menu.css">
-    <link rel="stylesheet" href="stylesradio.css">
+    <link rel="stylesheet" href="css/pagina-one.css">
+    <link rel="stylesheet" href="css/pagina-two.css">
+    <link rel="stylesheet" href="css/pagina-three.css">
+    <link rel="stylesheet" href="css/menu.css">
+    <link rel="stylesheet" href="css/stylesradio.css">
 </head>
 <body>
     <section id="section1" class="sec1">
         <nav class="menu">
             <ul class="menu-ul">
                 <!-- <li class="menu-li li-img"><img class="image-logo" src="radio-lsogo.png" alt=""></li> -->
-            <a href="#section1"><li class="menu-li li-img"><img id="image-logo" class="image-logo" src="radio-logo.png" alt=""></li></a>
+            <a href="#section1"><li class="menu-li li-img"><img id="image-logo" class="image-logo" src="images/radio-logo.png" alt=""></li></a>
             <li class="menu-li li-normal"><a style="color: white;" href="#noticiasdiv">Noticias</a></li>
              <li class="menu-li li-normal"><a style="color: white;" href="#programacao">Programação</a></li>
              <li class="menu-li li-normal"><a style="color: white;" href="/pedir-musica.html">Peça sua música</a></li>
@@ -30,13 +30,13 @@
         </nav>
         <div class="front-left">
             <div class="agora">
-                <img id="noar" style="margin: 2% 12%;" src="noar.png" alt="">
+                <img id="noar" style="margin: 2% 12%;" src="/images/noar.png" alt="">
                 <p class="tocando" style="width: 50%; padding: 2%; color: white; text-align: center;">TOCANDO AGORA:</p>
-                <img id="imgprog" style="width: 80%; margin-left: 10%;" src="tribuna.png" alt="">
+                <img id="imgprog" style="width: 80%; margin-left: 10%;" src="/images/tribuna.png" alt="">
             </div>
             <div class="parceiro">
                 <h2>PARCERIA</h2>
-                <img id="sublime" src="sublime-logo.png" style="width: 40%;margin: auto;" alt="">
+                <img id="sublime" src="/images/sublime-logo.png" style="width: 40%;margin: auto;" alt="">
             </div>
         </div>
         <div class="front-right">
@@ -45,10 +45,10 @@
                     <a href="https://www.youtube.com/channel/UCFMcrjqdbpGBl1tJWyjLiTw" target="_blank"><div class="circle"></div></a><div class="divr"><p class="paragsup"><i class="aovivo">AO VIVO</i><br>ACOMPANHE A TRANSMISSÃO AO VIVO NO YOUTUBE [<a href="https://www.youtube.com/channel/UCFMcrjqdbpGBl1tJWyjLiTw">CLICANDO AQUI</a>]</p></div>
                 </li>
                 <li class="li-social">
-                    <div class="circleinf1"><img id="insta" src="insta-logo.png" target="_blank" alt=""><span class="spage1"><strong><a style="text-decoration: none;color: aliceblue;" href="https://instagram.com/cidadefm101">@cidadefm101</a></strong></span></div><div class="divrinf1"><p class="parag">Fique por dentro do que rola nos bastidores. Acesso o nosso instagram</p></div>
+                    <div class="circleinf1"><img id="insta" src="icons/insta-logo.png" target="_blank" alt=""><span class="spage1"><strong><a style="text-decoration: none;color: aliceblue;" href="https://instagram.com/cidadefm101">@cidadefm101</a></strong></span></div><div class="divrinf1"><p class="parag">Fique por dentro do que rola nos bastidores. Acesso o nosso instagram</p></div>
                 </li>
                 <li class="li-social">
-                    <div class="circleinf1"><img id="whats" src="whats-logo.png" alt=""><span class="spage1"><p style="font-size: 8pt;display: inline-block;">99</p> <strong>98197-7555</strong></span></div><div class="divrinf1"><p class="parag">Peça sua música ou envie críticas para nosso Whatsapp</p></div>
+                    <div class="circleinf1"><img id="whats" src="icons/whats-logo.png" alt=""><span class="spage1"><p style="font-size: 8pt;display: inline-block;">99</p> <strong>98197-7555</strong></span></div><div class="divrinf1"><p class="parag">Peça sua música ou envie críticas para nosso Whatsapp</p></div>
                 </li>
             </ul>
         </div>
@@ -56,23 +56,24 @@
     <section id="noticiasdiv" class="sec2">
         <h1 id="notic">Notícias</h1>
         <div id="noticprinc" class="news">
-            
                 <!-- <img class="principal" src="news1.jpeg" alt=""> -->
                 <p class="legenda">Prefeita Vanessa Maia nomeia secretários do município</p>
-            
-            <p style="color: aliceblue; font-family: Calibri, sans-serif; font-size: ;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam numquam unde praesentium quae sunt ex libero placeat nulla, vel nihil quaerat voluptas, mollitia delectus tenetur nemo ipsa deleniti commodi quam.</p>
+            <p style="color: aliceblue; font-family: Calibri, sans-serif; font-size: 1vw;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam numquam unde praesentium quae sunt ex libero placeat nulla, vel nihil quaerat voluptas, mollitia delectus tenetur nemo ipsa deleniti commodi quam.</p>
         </div>
         <div class="prog">
-            <!-- <h1>Programação</h1> -->
+            <!-- Coluna de Noticias -->
             <ul class="ul-news">
-                <li id="news-fst" class="li-news" onclick="changeNews1()">
-                    <img id="imgli1" class="img-news" src="coleta.jpeg" alt=""><p class="pnew">VÍDEO: EM PEDREIRAS CAÇAMBA DO PAC ESTÁ SENDO UTILIZADA PARA COLETA DO LIXO</p><span class="saiba"><a href="#" style="color: rgb(41, 12, 68);">Saiba mais</a></span>
+                <li id="news-fst" class="li-news">
+                    <img id="imgli1" class="img-news" src="images/news1.jpeg" alt=""><p class="pnew">Prefeita Vanessa Maia nomeia secretários do município</p><span class="saiba"><a class="saibamais" href="#" style="color: rgb(41, 12, 68);">Saiba mais</a></span>
                 </li>
-                <li id="news-snd" class="li-news news-snd" onclick="changeNews2()">
-                    <img id="imgli2" class="img-news" src="procon.jpeg" alt=""><p class="pnew">PROCON LANÇA ALGUMAS ORIENTAÇÕES PARA POSSÍVEL VOLTA AS AULAS EM 2021</p><span class="saiba"><a href="#" style="color: rgb(41, 12, 68);">Saiba mais</a></span>
+                <li id="news-snd" class="li-news">
+                    <img id="imgli2" class="img-news" src="images/coleta.jpeg" alt=""><p class="pnew">VÍDEO: EM PEDREIRAS CAÇAMBA DO PAC ESTÁ SENDO UTILIZADA PARA COLETA DO LIXO</p><span class="saiba"><a class="saibamais" href="#" style="color: rgb(41, 12, 68);">Saiba mais</a></span>
                 </li>
-                <li id="news-trd" class="li-news news-trd" onclick="changeNews3()">
-                    <img id="imgli3" class="img-news" src="loteamento.jpg" alt=""><p class="pnew">CONSTRUÇÕES NO LOTEAMENTO SÃO REATIVADAS APÓS NOVA ADMINISTRAÇÃO</p><span class="saiba"><a href="#" style="color: rgb(41, 12, 68);">Saiba mais</a></span>
+                <li id="news-trd" class="li-news news-snd">
+                    <img id="imgli3" class="img-news" src="images/procon.jpeg" alt=""><p class="pnew">PROCON LANÇA ALGUMAS ORIENTAÇÕES PARA POSSÍVEL VOLTA AS AULAS EM 2021</p><span class="saiba"><a class="saibamais" href="#" style="color: rgb(41, 12, 68);">Saiba mais</a></span>
+                </li>
+                <li id="news-th" class="li-news news-trd">
+                    <img id="imgli4" class="img-news" src="images/loteamento.jpg" alt=""><p class="pnew">CONSTRUÇÕES NO LOTEAMENTO SÃO REATIVADAS APÓS NOVA ADMINISTRAÇÃO</p><span class="saiba"><a class="saibamais" href="#" style="color: rgb(41, 12, 68);">Saiba mais</a></span>
                 </li>
                 <li class="li-maisnotic" >
                     <a href="/todas-noticias">Ver todas notícias</a>
@@ -152,7 +153,7 @@
               </table>
         </div>
     </section>
-    <script src="pageone.js"></script>
-    <script src="news.js"></script>
+    <script src="js/pageone.js"></script>
+    <script src="js/news.js"></script>
 </body>
 </html>
