--- a/pedir-musica.html
+++ b/pedir-musica.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Radio FM Cidade :: 101,5 Mhz</title>
-    <link rel="stylesheet" href="pagina-one.css">
-    <link rel="stylesheet" href="pagina-two.css">
-    <link rel="stylesheet" href="pagina-three.css">
-    <link rel="stylesheet" href="menu.css">
-    <link rel="stylesheet" href="stylesradio.css">
+    <link rel="stylesheet" href="css/pagina-one.css">
+    <link rel="stylesheet" href="css/pagina-two.css">
+    <link rel="stylesheet" href="css/pagina-three.css">
+    <link rel="stylesheet" href="css/menu.css">
+    <link rel="stylesheet" href="css/stylesradio.css">
+    <link rel="stylesheet" href="css/pedemusica.css">
 </head>
 <body>
-    <section class="sec1">
+    <section id="section1" class="sec1">
         <nav class="menu">
             <ul class="menu-ul">
                 <!-- <li class="menu-li li-img"><img class="image-logo" src="radio-lsogo.png" alt=""></li> -->
-            <li class="menu-li li-img"><img id="image-logo" class="image-logo" src="radio-logo.png" alt=""></li>
+            <a href="index.html"><li class="menu-li li-img"><img id="image-logo" class="image-logo" src="/images/radio-logo.png" alt=""></li></a>
             <li class="menu-li li-normal"><a style="color: white;" href="#noticiasdiv">Noticias</a></li>
              <li class="menu-li li-normal"><a style="color: white;" href="#programacao">Programação</a></li>
              <li class="menu-li li-normal">Peça sua música</li>
@@ -30,29 +31,48 @@
         </nav>
         <div class="front-left">
             <div class="agora">
-                <img id="noar" style="margin: 2% 12%;" src="noar.png" alt="">
+                <img id="noar" style="margin: 2% 12%;" src="/images/noar.png" alt="">
                 <p class="tocando" style="width: 50%; padding: 2%; color: white; text-align: center;">TOCANDO AGORA:</p>
-                <img id="imgprog" style="width: 80%; margin-left: 10%;" src="tribuna.png" alt="">
+                <img id="imgprog" style="width: 80%; margin-left: 10%;" src="/images/tribuna.png" alt="">
             </div>
             <div class="parceiro">
                 <h2>PARCERIA</h2>
-                <img id="sublime" src="sublime-logo.png" style="width: 40%;margin: auto;" alt="">
+                <img id="sublime" src="/images/sublime-logo.png" style="width: 40%;margin: auto;" alt="">
             </div>
-        </div>
-        <div class="front-right">
-            <ul class="right">
+            <!-- <ul height="50px" class="right">
                 <li class="li-right">
                     <a href="https://www.youtube.com/channel/UCFMcrjqdbpGBl1tJWyjLiTw" target="_blank"><div class="circle"></div></a><div class="divr"><p class="paragsup"><i class="aovivo">AO VIVO</i><br>ACOMPANHE A TRANSMISSÃO AO VIVO NO YOUTUBE [<a href="https://www.youtube.com/channel/UCFMcrjqdbpGBl1tJWyjLiTw">CLICANDO AQUI</a>]</p></div>
                 </li>
-                <li class="li-social">
-                    <div class="circleinf1"><img id="insta" src="insta-logo.png" target="_blank" alt=""><span class="spage1"><strong><a style="text-decoration: none;color: aliceblue;" href="https://instagram.com/cidadefm101">@cidadefm101</a></strong></span></div><div class="divrinf1"><p class="parag">Fique por dentro do que rola nos bastidores. Acesso o nosso instagram</p></div>
-                </li>
-                <li class="li-social">
-                    <div class="circleinf1"><img id="whats" src="whats-logo.png" alt=""><span class="spage1"><p style="font-size: 8pt;display: inline-block;">99</p> <strong>98197-7555</strong></span></div><div class="divrinf1"><p class="parag">Peça sua música ou envie críticas para nosso Whatsapp</p></div>
-                </li>
-            </ul>
+            </ul> -->
+        </div>
+        <div class="front-right2">
+            <form class="pedido" action="#">
+                <label for="">Seu nome:</label>&nbsp;
+                <input type="text" id="nameForm" name="nome" value="" size="50"><br>
+                <label for="">Seu apelido(como voce é conhecido):</label>&nbsp;
+                <input type="text" id="apelidoForm" name="apelido" size="19"><br>
+                E-mail: <input type="text" id="email" size="30" name="mail"> <span id="emailCheck"></span><br>
+                
+                <br>
+                <label for="">Seu Endereço</label><br>
+                <label for="">Rua:</label>&nbsp;<input type="text" id="ruaForm" name="rua" size="30"> <label for="">N: </label><input type="text" id="numForm" maxlength="4" size="4" name="num"><label for=""><br>
+                Bairro:</label><input type="text" id="bairroForm" name="bairro" size="10">
+                <label for="">Cidade:</label>&nbsp;<input type="text" id="cidadeForm" name="cidade">
+                <select name="estados" id="estado">
+                    <option value="CE">CE</option>
+                    <option value="MA" selected>MA</option>
+                    <option value="PI">PI</option>
+                </select><br><br>
+                <label for="">Nome da Música:</label>&nbsp;<input type="text" id="nomeMusicaForm" name=""><br>
+                <label for="">Cantor(a)/Banda:</label> <input type="text" id="nomeBandaForm"  name="">&nbsp;&nbsp;
+                <!-- <label for="">Mais detalhes sobre a música:</label><input type="text" name=""><br> -->
+                <button id="buttonPedido" onmouseenter="enviaPedido()" onclick="return emailCheck()">Enviar Pedido<!-- se eu colocar o submit o onclick funciona rapidamete por que o submit recarrega a pagina<input type="submit" value="Enviar pedido">-->
+                </button><br>
+            </form>
+            <p margin="auto" style="text-align: center;" id="result"></p>
         </div>
     </section>
-    <script src="pageone.js"></script>
+    <script src="js/pageone.js"></script>
+    <script src="js/pedemusica.js"></script>
 </body>
 </html>
