as barras das imagens

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="#section1"><li class="menu-li li-img"><img id="image-logo" class="image-logo" src="images/radio-logo.png" alt=""></li></a>
             <li class="menu-li li-normal"><a style="color: white;" href="#noticiasdiv">Noticias</a></li>
              <li class="menu-li li-normal"><a style="color: white;" href="#programacao">Programação</a></li>
-             <li class="menu-li li-normal"><a style="color: white;" href="/pedir-musica.html">Peça sua música</a></li>
+             <li class="menu-li li-normal"><a style="color: white;" href="pedir-musica.html">Peça sua música</a></li>
              <li class="menu-li li-normal">Fale conosco</li>
              <li class="menu-li li-search"><input type="text" name="search" placeholder="Buscar..."></li>
             </ul>
@@ -30,13 +30,13 @@
         </nav>
         <div class="front-left">
             <div class="agora">
-                <img id="noar" style="margin: 2% 12%;" src="/images/noar.png" alt="">
+                <img id="noar" style="margin: 2% 12%;" src="images/noar.png" alt="">
                 <p class="tocando" style="width: 50%; padding: 2%; color: white; text-align: center;">TOCANDO AGORA:</p>
-                <img id="imgprog" style="width: 80%; margin-left: 10%;" src="/images/tribuna.png" alt="">
+                <img id="imgprog" style="width: 80%; margin-left: 10%;" src="images/tribuna.png" alt="">
             </div>
             <div class="parceiro">
                 <h2>PARCERIA</h2>
-                <img id="sublime" src="/images/sublime-logo.png" style="width: 40%;margin: auto;" alt="">
+                <img id="sublime" src="images/sublime-logo.png" style="width: 40%;margin: auto;" alt="">
             </div>
         </div>
         <div class="front-right">
@@ -55,7 +55,7 @@
     </section>
     <section id="noticiasdiv" class="sec2">
         <h1 id="notic">Notícias</h1>
-        <div id="noticprinc" class="news">
+        <div id="noticprinc" class="news" onmouseover="mousenews()">
                 <!-- <img class="principal" src="news1.jpeg" alt=""> -->
                 <p class="legenda">Prefeita Vanessa Maia nomeia secretários do município</p>
             <p style="color: aliceblue; font-family: Calibri, sans-serif; font-size: 1vw;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam numquam unde praesentium quae sunt ex libero placeat nulla, vel nihil quaerat voluptas, mollitia delectus tenetur nemo ipsa deleniti commodi quam.</p>
@@ -76,7 +76,7 @@
                     <img id="imgli4" class="img-news" src="images/loteamento.jpg" alt=""><p class="pnew">CONSTRUÇÕES NO LOTEAMENTO SÃO REATIVADAS APÓS NOVA ADMINISTRAÇÃO</p><span class="saiba"><a class="saibamais" href="#" style="color: rgb(41, 12, 68);">Saiba mais</a></span>
                 </li>
                 <li class="li-maisnotic" >
-                    <a href="/todas-noticias">Ver todas notícias</a>
+                    <a href="todas-noticias.html">Ver todas notícias</a>
                 </li>
             </ul>
             
