--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         </nav>
         <div class="front-left">
             <div class="agora">
-                <img id="noar" style="margin: 2% 12%;" src="../images/noar.png" alt="">
+                <img id="noar" style="margin: 2% 12%;" src="images/noar.png" alt="">
                 <p class="tocando" style="width: 50%; padding: 2%; color: white; text-align: center;">TOCANDO AGORA:</p>
-                <img id="imgprog" style="width: 80%; margin-left: 10%;" src="../images/tribuna.png" alt="">
+                <img id="imgprog" style="width: 80%; margin-left: 10%;" src="images/tribuna.png" alt="">
             </div>
             <div class="parceiro">
                 <h2>PARCERIA</h2>
