--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav class="menu">
             <ul class="menu-ul">
                 <!-- <li class="menu-li li-img"><img class="image-logo" src="radio-lsogo.png" alt=""></li> -->
-            <a href="#section1"><li class="menu-li li-img"><img id="image-logo" class="image-logo" src="/images/radio-logo.png" alt=""></li></a>
+            <a href="#section1"><li class="menu-li li-img"><img id="image-logo" class="image-logo" src="../images/radio-logo.png" alt=""></li></a>
             <li class="menu-li li-normal"><a style="color: white;" href="#noticiasdiv">Noticias</a></li>
              <li class="menu-li li-normal"><a style="color: white;" href="#programacao">Programação</a></li>
              <li class="menu-li li-normal"><a style="color: white;" href="pedir-musica.html">Peça sua música</a></li>
@@ -32,7 +32,7 @@
             <div class="agora">
                 <img id="noar" style="margin: 2% 12%;" src="/images/noar.png" alt="">
                 <p class="tocando" style="width: 50%; padding: 2%; color: white; text-align: center;">TOCANDO AGORA:</p>
-                <img id="imgprog" style="width: 80%; margin-left: 10%;" src="/images/tribuna.png" alt="">
+                <img id="imgprog" style="width: 80%; margin-left: 10%;" src="images/tribuna.png" alt="">
             </div>
             <div class="parceiro">
                 <h2>PARCERIA</h2>
