adicao de botao menu responsivo

--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
         <nav class="menu">
             <ul class="menu-ul">
                 <!-- <li class="menu-li li-img"><img class="image-logo" src="radio-lsogo.png" alt=""></li> -->
-            <a href="#section1"><li class="menu-li li-img"><img id="image-logo" class="image-logo" src="../images/radio-logo.png" alt=""></li></a>
+            <a href="#section1"><li class="menu-li li-img"><img id="image-logo" class="image-logo" src="images/radio-logo.png" alt=""></li></a>
+            <li class="menu-li li-sand"><div id="sandwich" onclick="toggleMenu()">
+                <div id="bar1" class="bar"></div>
+                <div id="bar2" class="bar"></div>
+                <div id="bar3" class="bar"></div>
+             </div></li>
             <li class="menu-li li-normal"><a style="color: white;" href="#noticiasdiv">Noticias</a></li>
              <li class="menu-li li-normal"><a style="color: white;" href="#programacao">Programação</a></li>
              <li class="menu-li li-normal"><a style="color: white;" href="pedir-musica.html">Peça sua música</a></li>
@@ -30,7 +35,7 @@
         </nav>
         <div class="front-left">
             <div class="agora">
-                <img id="noar" style="margin: 2% 12%;" src="/images/noar.png" alt="">
+                <img id="noar" style="margin: 2% 12%;" src="images/noar.png" alt="">
                 <p class="tocando" style="width: 50%; padding: 2%; color: white; text-align: center;">TOCANDO AGORA:</p>
                 <img id="imgprog" style="width: 80%; margin-left: 10%;" src="images/tribuna.png" alt="">
             </div>
@@ -155,5 +160,6 @@
     </section>
     <script src="js/pageone.js"></script>
     <script src="js/news.js"></script>
+    <script src="js/menu.js"></script>
 </body>
 </html>
