Adicionando elementos responsivos para Sec1 e Sec2

--- a/index.html
+++ b/index.html
@@ -35,9 +35,13 @@
         </nav>
         <div class="front-left">
             <div class="agora">
-                <img id="noar" style="margin: 2% 12%;" src="images/noar.png" alt="">
-                <p class="tocando" style="width: 50%; padding: 2%; color: white; text-align: center;">TOCANDO AGORA:</p>
+                <div id="imgnoar">
+                    <img id="noar" style="margin: 2% 12%;" src="images/noar.png" alt="">
+                </div>
+                <div id="tocandoprog">
+                    <p class="tocando">TOCANDO AGORA:</p>
                 <img id="imgprog" style="width: 80%; margin-left: 10%;" src="images/tribuna.png" alt="">
+                </div>
             </div>
             <div class="parceiro">
                 <h2>PARCERIA</h2>
@@ -50,10 +54,10 @@
                     <a href="https://www.youtube.com/channel/UCFMcrjqdbpGBl1tJWyjLiTw" target="_blank"><div class="circle"></div></a><div class="divr"><p class="paragsup"><i class="aovivo">AO VIVO</i><br>ACOMPANHE A TRANSMISSÃO AO VIVO NO YOUTUBE [<a href="https://www.youtube.com/channel/UCFMcrjqdbpGBl1tJWyjLiTw">CLICANDO AQUI</a>]</p></div>
                 </li>
                 <li class="li-social">
-                    <div class="circleinf1"><img id="insta" src="icons/insta-logo.png" target="_blank" alt=""><span class="spage1"><strong><a style="text-decoration: none;color: aliceblue;" href="https://instagram.com/cidadefm101">@cidadefm101</a></strong></span></div><div class="divrinf1"><p class="parag">Fique por dentro do que rola nos bastidores. Acesso o nosso instagram</p></div>
+                    <div class="circleinf1"><img id="insta" src="icons/insta-logo.png" target="_blank" alt=""><span class="spage1"><strong><a id="ainst" style="text-decoration: none;color: aliceblue;" href="https://instagram.com/cidadefm101">@cidadefm101</a></strong></span></div><div class="divrinf1"><p class="parag">Fique por dentro do que rola nos bastidores. Acesso o nosso instagram</p></div>
                 </li>
                 <li class="li-social">
-                    <div class="circleinf1"><img id="whats" src="icons/whats-logo.png" alt=""><span class="spage1"><p style="font-size: 8pt;display: inline-block;">99</p> <strong>98197-7555</strong></span></div><div class="divrinf1"><p class="parag">Peça sua música ou envie críticas para nosso Whatsapp</p></div>
+                    <div class="circleinf1"><img id="whats" src="icons/whats-logo.png" alt=""><span class="spage1"><p style="font-size: 1.2vh;display: inline-block;">99</p> <strong id="numwhat">98197-7555</strong></span></div><div class="divrinf1"><p class="parag">Peça sua música ou envie críticas para nosso Whatsapp</p></div>
                 </li>
             </ul>
         </div>
@@ -61,7 +65,7 @@
     
     <section id="noticiasdiv" class="sec2">
         <h1 id="notic">Notícias</h1>
-        <div id="noticprinc" class="news" onmouseover="mousenews()">
+        <div id="noticprinc" class="news">
                 <!-- <img class="principal" src="news1.jpeg" alt=""> -->
                 <p class="legenda">Prefeita Vanessa Maia nomeia secretários do município</p>
             <p style="color: aliceblue; font-family: Calibri, sans-serif; font-size: 1vw;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam numquam unde praesentium quae sunt ex libero placeat nulla, vel nihil quaerat voluptas, mollitia delectus tenetur nemo ipsa deleniti commodi quam.</p>
