--- a/index.html
+++ b/index.html
@@ -166,5 +166,6 @@
     <script src="js/pageone.js"></script>
     <script src="js/news.js"></script>
     <script src="js/menu.js"></script>
+    <script src="js/programacao.js"></script>
 </body>
 </html>
